refactor(core): apply SOLID enhancements and code style improvements
- Aggregate core dependencies into 'AgentEnv' container to simplify constructors.
- Perform semantic renaming: Schedulable -> AgentTask, SchedulableFactory -> AgentTaskFactory, StandardAgentLoop -> ReActAgentLoop, KnowledgeBase -> LongTermMemory.
- Encapsulate chat parameters into 'ChatRequest' object for ModelGateway interface.
- Refactor all ModelGateway implementations (OpenAI, Anthropic, Gemini, Retrying, Fallback) to use ChatRequest.
- Update SubAgentTask and GraphExecutor to use AgentEnv and the new task system.
- Add persistWith convenience method to SessionContext.
- Update all unit and integration tests to align with the new architecture.
- Fix regressions in integration tests related to project root handling and path sanitization on MacOS.
- Verified all 117 tests pass (91 core + 26 integration).